process-services/2.4/support/index.md
---
title: Supported platforms
---

Here is a list of the individual components that have been through the complete Alfresco Quality Assurance and Certification activities for Alfresco Process Services.

Choose a combination of products to build your own Supported Stack. If anything is unclear then please contact our Support team - submit a case via [Hyland Community]({% link support/latest/contact.md %}).

| Version | Notes |
| ------- | ----- |
| **Operating systems** | |
| Red Hat Enterprise Linux 8 | |
| Red Hat Enterprise Linux 7.7 | |
| Red Hat Enterprise Linux 7.6 | |
| Windows Server 2019 | |
| Windows Server 2016 | |
| Rocky Linux 8.7 | |
| CentOS 8 x64 | |
| CentOS 7 x64 | |
| | |
| **Databases** | |
| MariaDB 10.5 | 2.7.3 |
| MariaDB 10.4 | 2.7.3 |
| MySQL 8.0 | `mysql-connector-java-8.0.25.jar` |
| MySQL 5.7 | `mysql-connector-java-8.0.25.jar` |
| MS SQL Server 2019 | `mssql-jdbc-9.2.1.jre11.jar` |
| MS SQL Server 2019 | `mssql-jdbc-9.2.1.jre8.jar` |
| MS SQL Server 2017 | `mssql-jdbc-9.2.1.jre11.jar` |
| MS SQL Server 2017 | `mssql-jdbc-9.2.1.jre8.jar` |
| Oracle 19c | 21.1.0.0 |
| PostgreSQL 13.1 | `postgresql-42.2.22.jar` |
| PostgreSQL 12.4 | `postgresql-42.2.22.jar` |
| PostgreSQL 11.7 | `postgresql-42.2.22.jar` |
| Amazon Aurora | Use of Amazon Aurora is supported only if it is configured to emulate one of the supported versions of PostgreSQL or MySQL listed above, and the listed JDBC driver is used. |
| | |
| **Application servers** | |
| Tomcat 9.0 | |
| Jetty 9.4 | |
| | |
| **JDKs** | |
| OpenJDK 17.0.2 |  |
| OpenJDK 11.0.2 |  |
| | |
| **Browsers** | |
| Mozilla Firefox | |
| Microsoft Edge | Versions based on Chromium only |
| MS Internet Explorer 11 | |
| Chrome | |
| | |
| **Third party integrations** | |
| Elasticsearch 7.17.6 | |
| | |
| **Integrations** | |
| Identity Service 1.2 | For use with LDAP and SAML |
| Identity Service 1.1 | For use with LDAP and SAML |
| Keycloak 24.0.3 | Enable `Exclude Issuer from Authentication Response` - see [Configure authentication]({% link process-services/2.4/config/authenticate.md %}#properties) for details. |
| Keycloak 21.1.2 | Enable `Exclude Issuer from Authentication Response` - see [Configure authentication]({% link process-services/2.4/config/authenticate.md %}#properties) for details. |
| | |
| **Applications** | |
| Alfresco Digital Workspace 4.3 | Requires Alfresco Process Services 2.4.2. |
| | |
| **Related components** | |
| VMWare ESXi 5.1.0 | For supported guest operating systems |
